# auth-o-tron

./: .gitignore  Cargo.toml  Dockerfile  README.md  readme.md  schema.json  skaffold.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml  docs.yaml  publish-crate.yaml  release.yaml
authotron/: Cargo.toml  README.md  schema.json  skaffold.yaml
authotron-client/: Cargo.toml
authotron-client/src/: lib.rs
authotron-types/: Cargo.toml
authotron-types/src/: lib.rs
authotron/docs/: book.toml
authotron/docs/src/: SUMMARY.md
authotron/docs/src/api/: endpoints.md
authotron/docs/src/concepts/: how-it-works.md
authotron/docs/src/configuration/: README.md  augmenters.md  jwt.md  logging.md  providers.md  server.md
authotron/docs/src/deployment/: docker.md  kubernetes.md  nginx.md
authotron/docs/src/getting-started/: installation.md  quickstart.md
authotron/docs/src/migration/: rs256.md
authotron/docs/src/reference/: environment-variables.md  metrics.md
authotron/examples/nginx-auth/: docker-compose.yml  readme.md
authotron/examples/nginx-auth/config/: auth-o-tron.yml
authotron/scripts/: stop_mongo.sh
authotron/src/: auth.rs  lib.rs  main.rs  startup.rs  state.rs
authotron/src/augmenters/: base.rs  ldap_augmenter.rs
authotron/src/config/: mod.rs  store.rs  types.rs
authotron/src/metrics/: recorder.rs
authotron/src/middleware/: http_metrics.rs  mod.rs
authotron/src/models/: mod.rs  token.rs  user.rs
authotron/src/providers/: base.rs  ecmwf_token_generator_provider.rs  ecmwfapi_provider.rs  efasapi_provider.rs  jwt_provider.rs  mod.rs  openid_offline_provider.rs  plain_provider.rs
authotron/src/routes/: augmenters.rs  auth.rs  health.rs  homepage.rs  metrics.rs  mod.rs  whoami.rs
authotron/src/static/: index.html
authotron/src/store/: base.rs  mod.rs  mongodb_store.rs  no_store.rs
authotron/src/utils/: cache.rs  http_client.rs  http_helpers.rs  log_throttle.rs  logger.rs  mod.rs  value.rs
authotron/tests/: common.rs  ecmwf_token_generator_integration.rs  logging_integration.rs  offline_integration.rs  server_integration.rs  shutdown_integration.rs
authotron/tests/fixtures/: README.md  test-rsa-private-1024.pem  test-rsa-private-512.pem  test-rsa-public-1024.pem  test-rsa-public-512.pem
docs/src/: README.md  SUMMARY.md
docs/src/configuration/: augmenters.md  logging.md  server.md  store.md
docs/src/deployment/: nginx.md
docs/src/getting-started/: installation.md  quickstart.md
docs/src/reference/: environment-variables.md
docs/theme/: custom.css
examples/nginx-auth/: readme.md
examples/nginx-auth/config/: auth-o-tron.yml
examples/nginx-auth/nginx/: nginx.conf
scripts/: start_mongo.sh
src/: augmenters.rs  auth.rs  config.rs  http_helpers.rs  lib.rs  logger.rs  main.rs  models.rs  providers.rs  startup.rs  state.rs  store.rs
src/augmenters/: augmenters.rs  base.rs  ldap_augmenter.rs  mod.rs  plain_advanced_augmenter.rs  plain_augmenter.rs
src/auth/: auth.rs  ecmwfapi_auth.rs  ecmwfapi_provider.rs  jwt_auth.rs  jwt_provider.rs  ldap_augmenter.rs  mod.rs  openid_offline_provider.rs  plain_augmenter.rs  plain_provider.rs
src/config/: config.rs  logging.rs  mod.rs  store.rs  types.rs
src/metrics/: mod.rs  recorder.rs
src/models/: mod.rs  token.rs  user.rs
src/providers/: base.rs  ecmwf_token_generator_provider.rs  ecmwfapi_provider.rs  efasapi_provider.rs  jwt_provider.rs  mod.rs  openid_offline_provider.rs  plain_provider.rs  providers.rs
src/routes/: augmenters.rs  auth.rs  health_routes.rs  homepage.rs  metrics.rs  mod.rs  provider_routes.rs  providers.rs  token_routes.rs  tokens.rs
src/static/: index.html
src/store/: base.rs  mod.rs  mongodb_store.rs  no_store.rs  store.rs
src/utils/: http_helpers.rs  log_throttle.rs  logger.rs  mod.rs  value.rs
tests/: common.rs  ecmwf_token_generator_integration.rs  offline_integration.rs  server_integration.rs
