[package]
name = "authotron"
version = "0.2.8"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "~0.15", features = [
    "axum",
    "axum-multipart",
] }
async-trait = "~0.1"
axum = "~0.8"
cached = { version = "~0.56", features = ["async", "tokio"] }
chrono = "~0.4"
figment = { version = "~0.10", features = ["yaml", "env"] }
futures = "~0.3"
http = "~1.3"
jsonwebtoken = { version = "~10.0", features = ["rust_crypto"] }
ldap3 = "~0.12"
mongodb = "~3.3"
reqwest = { version = "~0.12", features = ["json"] }
schemars = "~1.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
tokio = { version = "~1.47", features = ["full"] }
uuid = { version = "~1.18", features = ["v4"] }
# Core tracing
tracing = "~0.1"
# Subscriber implementations & formatting layers
tracing-subscriber = { version = "~0.3", features = ["env-filter", "json"] }
# Bridge older `log` calls into `tracing`
base64 = "~0.22"
mockito = "~1.7"
