[package]
name = "authotron-types"
version = "0.1.0"
edition = "2024"
description = "Shared authentication DTOs for the auth-o-tron ecosystem."
license = "Apache-2.0"
repository = "https://github.com/ecmwf/auth-o-tron"
rust-version = "1.85"

[dependencies]
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
